# livet

./: .gitignore  Cargo.toml  README.md
frontend/: Cargo.toml  Trunk.toml  colors.scss  index.html  package.json
frontend/src/: audio.rs  components.rs  main.rs  network.rs  pages.rs
frontend/src/audio/: ctx.rs  devices.rs  effects.rs
frontend/src/components/: auth.rs  band_member.rs  fader.rs  knob.rs  level_meter.rs  mixerboard.rs  navbar.rs  session.rs
frontend/src/network/: ice.rs  rtc.rs  sdp.rs
frontend/src/pages/: home.rs  settings.rs  studio.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
signal_server/: Cargo.toml
signal_server/src/: database.rs  main.rs  messages.rs  server.rs
signal_server/src/sql/: create_table.sql
