[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-channel = "1.9.0"
futures = "0.3.28"
gloo = { version = "0.10.0", features = ["worker"] }
gloo-console = "0.2.3"
gloo-net = "0.3.0"
gloo-utils = "0.1.7"
gloo-worker = { version = "0.4.0", features = ["futures"] }
js-sys = "0.3.64"
oauth2 = "4.4.1"
serde = "1.0.164"
serde_json = "1.0.97"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

protocol = {path = "../protocol/"}
uuid = { version = "1.5.0", features = ["v4", "serde"] }
leptos = { version = "0.5.1", features = ["csr"] }
leptos_router = { version = "0.5.1", features = ["csr"] }
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
leptos_oidc = "0.2.0"

[dependencies.web-sys]
version = "0.3.64"
features = ["TrackEvent",
  "MediaStreamAudioDestinationNode", 
  "MediaStreamAudioSourceNode", 
  "AudioContext", 
  "AudioContextOptions", 
  "AudioDestinationNode", 
  "AudioNode",
  "AudioTrack",
  "AudioParam",
  "GainNode",
  "AnalyserNode",
  "Window",
  "MessageEvent", 
  "RtcPeerConnection",
  "RtcConfiguration",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcSessionDescription",
  "RtcIceGatheringState",
  "RtcIceCredentialType",
  "RtcIceTransportPolicy",
  "RtcRtpSender",
  "Navigator",
  "RtcIceServer",
  "MediaDevices",
  "MediaStream",
  "MediaStreamTrack",
  "MediaTrackConstraints",
  "MediaStreamConstraints",
  "HtmlVideoElement",
  "HtmlMediaElement",
  "EventListener",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "ProgressEvent",
  "HtmlButtonElement",
  "HtmlInputElement"]
