[package]
name = "signal_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.18", features = ["ws", "tracing", "headers"] }
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["sink", "std"] }
protocol = {path = "../protocol/"}
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.29.0", features = ["full", "macros"] }
tokio-tungstenite = "0.19.0"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
